# scale-master-api

./: .gitignore  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 043e3acd8d6c_removed_migration_test_column.py  18f16abac892_initial_schema.py  9ef6cf8426f9_test_migration.py  e7597768d73e_initial_schema.py
routers/: score.py  user.py
